# drl-evaluation

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml
conf/: config.yaml
conf/prediction_model/: cox_model.yaml  lgbm_classifier.yaml  lgbm_regressor.yaml  linear_regression.yaml  logistic_regression.yaml  mlp_prediction.yaml  multitask_lasso.yaml
conf/representation_model/: auto_encoder.yaml  auto_encoder_multi_head.yaml  decoupler_rpz.yaml  gnn.yaml  ica.yaml  identity.yaml  masked_auto_encoder.yaml  nmf.yaml  pca.yaml  random.yaml  scvi.yaml  tsne.yaml  umap.yaml  vae.yaml
conf/task/: consensus_clustering_coad.yaml  gene_essentiality.yaml  survival_prediction_tcga_task.yaml
omics_rpz/: constants.py  exceptions.py
omics_rpz/data/: __init__.py  pretrained_gene_list_ge.csv  pretrained_gene_list_ospercohort.csv
omics_rpz/data/datasets/: omics_dataset.py
omics_rpz/data/loading/: ccle.py  graph_loading.py  gtex.py  msigdb_pathways.py  string_embeddings.py  tcga.py  utils.py
omics_rpz/data/utils/: mix_centers.py
omics_rpz/experiment_tracking/: __init__.py  git_interface.py  storage.py
omics_rpz/losses/: __init__.py  cox.py  dice.py  mape.py
omics_rpz/metrics/: __init__.py  classification_metrics.py  gene_essentiality_specific_metrics.py  others.py  survival_metrics.py  utils.py
omics_rpz/models/: __init__.py  cox_model.py  mlp.py
omics_rpz/tasks/: __init__.py  gene_essentiality.py  tcga_prediction_task.py
omics_rpz/transforms/: __init__.py
omics_rpz/transforms/data_augmentation/: gaussian_noise.py
omics_rpz/transforms/preprocessors/: __init__.py  rnaseq_preprocessor.py  scalers.py
omics_rpz/transforms/representation_models/: auto_encoder.py  auto_encoder_multi_head.py  gnn.py  identity.py  masked_auto_encoder.py  pca.py  random_rpz.py  scvi.py  vae.py  wrappers.py
omics_rpz/utils/: __init__.py  early_stopping.py  functional.py  io.py  logging.py  memoize.py  plotting.py  preprocessing.py  seed.py
tests/experiment_tracking/: test_git_interface.py  test_storage.py
tests/experiment_tracking/assets/: tracked_file.txt
tests/transforms/representation_models/: test_auto_encoder.py  test_auto_encoder_multi_head.py  test_gnn.py  test_identity.py  test_masked_auto_encoder.py  test_pca.py  test_random.py
tools/: benchmark.py  benchmark_each_tcga_cohort.py  download_tcga_mutations.R  generate_ccle_data.py  immune_pop_deconv.R  load_outputs.py  parallel_grid_search.py  pretrain_tcga_autoencoders.py  ray_wrapper.py  repeated_holdout.py  repeated_holdout_best_saved_models.py  utils.py
